<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PCI Viet Nam</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="welcome_text">Chỉ số năng lực cạnh tranh cấp tỉnh</string>
    <string name="pci_result">PCI Result</string>
    <string name="pci_ranking">Ranking</string>
    <string name="summary">Summary</string>
    <string name="report">Report</string>
    <string name="news">News</string>
    <string name="about">About</string>
	<string name="config">Setting</string>
	<string name="search">Search</string>
	
	<string name="index">Index</string>
	<string name="district">District:</string>
	<string name="index_value">Index:</string>
	<string name="index_value_2">Score</string>
	<string name="year">Year:</string>
	
	<string name="no_pdf_reader">No PDF Reader application. Download Adobe Reader?</string>
	<string name="download">Download</string>
	<string name="no">No</string>
	
	<string name="sort">Sort</string>
	<string name="sort_by_rank">By rank</string>
	<string name="sort_by_name">By name</string>
	
	<string name="year_pci_rank">Year</string>
	
	<string name="error_download">Error occurs while downloading. Please check internet connection and try again later</string>
	
	<string name="downloading_state">Downloaded: </string>
	<string name="speed_state">Speed: </string>
	
	<string name="select_year">Select year</string>
	<string name="select_language">Select language</string>
	
	<string name="click_download_button">Click download button to get report</string>
	<string name="download_report">Download report</string>
	<string name="open_report">Open report</string>	
	
	<string name="year_pci">Year</string>
	<string name="rank_pci">Rank</string>
	<string name="score_pci">PCI Score</string>
	<string name="group_pci">Group</string>
	
	<string name="group">Group: </string>
	<string name="index_details">Sub-index</string>
	
	
</resources>
