<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:background="@drawable/bg_summary" 
    >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/click_download_button"
        android:id="@+id/tv_downloading"
        android:textColor="#000"
        />
    
<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Speed : 0kbps"
        android:id="@+id/tv_speed_downloading"
        android:textColor="#000"
        />    
    
	<SeekBar
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:thumb="@android:color/transparent"
	    android:padding="10dp" 
	    android:id="@+id/sb_downloading"
	    />
	
	<Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/download_report"
	    android:id="@+id/btn_download_report"
	    android:layout_margin="10dp"
	    />	
	
	<Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/open_report"
	    android:layout_marginLeft="7dp"
	    android:id="@+id/btn_open_report"
	    />
    

</LinearLayout>
