<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_summary" 
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical" 
        >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:orientation="horizontal"       
			android:paddingBottom="10dp"     
            >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="70dp"
                android:text="@string/district"
                android:textColor="#000"
                android:textSize="16dp"
                />
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#0067a8"
                android:text="Đồng Tháp"
                android:textStyle="bold"
                android:id="@+id/tv_district_name"
                android:textSize="16dp"
                />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingBottom="10dp"            
            >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="70dp"
                android:text="@string/index_value"
                android:textColor="#000"
                android:textSize="16dp"
                />
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#f00"
                android:text="5.55"
                android:id="@+id/tv_index_value"
                android:textSize="16dp"
                />
        </LinearLayout>   
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:orientation="horizontal"            
            >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="70dp"
                android:text="@string/year"
                android:textColor="#000"
                android:textSize="16dp"
                />
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#f00"
                android:text="2014"
                android:id="@+id/tv_year"
                android:textSize="16dp"
                />
        </LinearLayout>        
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0067a8"
        android:weightSum="5"
        android:orientation="horizontal" 
        android:padding="10dp"
        >
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/index_details"
            android:textColor="#FFF"
            />
        
		<TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/index_value_2"
            android:textColor="#FFF"
            android:gravity="center"
            />        
        
    </LinearLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        >
		
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            android:id="@+id/ll_index_container"
            >
        </LinearLayout>
        
    </ScrollView>
    

</LinearLayout>
