<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#0063a1"
        >
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:src="@drawable/ic_menu"
            android:layout_alignParentLeft="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/img_menu"
            />
        
		<ImageView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:src="@drawable/ic_back"
            android:layout_alignParentLeft="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/img_back"
            android:visibility="gone"
            />        
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="22dp"
            android:text="@string/pci_result"
            android:layout_centerInParent="true"
            android:id="@+id/tv_title"
      	/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/sort"
            android:textColor="#FFF"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bg_row_normal"
            android:visibility="gone"
            android:id="@+id/tv_sort"
            />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/year_pci_rank"
            android:textColor="#FFF"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bg_row_normal"
            android:visibility="gone"
            android:id="@+id/tv_select_year"
            />         
        
    </RelativeLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_container" >
        
    </FrameLayout>
    
    
    
    

</LinearLayout>
